# Ink-v2

./: .clang-format  CMakeLists.txt  notes.md  todo.md
assets/levels/: level1.json
assets/shaders/: char.fs  char.vs  platform.fs  platform.vs
docs/: drawing_recognition_plan.md
release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
release/.cmake/api/v1/reply/: cache-v2-8b451b783e7fe278813e.json  cmakeFiles-v1-3cf32d6ec7218b0fc7ca.json  codemodel-v2-4fabe8aee67ec27b478b.json  directory-vendor.glfw-Release-a0793f886d686609a4b7.json  directory-vendor.glfw.src-Release-dd446bbda2bae5dca797.json  index-2025-06-01T23-13-04-0871.json  target-Ink-Release-cd267499fb25c88a1f07.json  target-glfw-Release-e747f4fa73f7e7e1698e.json  target-uninstall-Release-3cfe89be3b430c18c455.json  target-update_mappings-Release-4c42d30d645f010d711d.json
source/core/: application.cc  application.h  drawing.h  entityManager.cc  entityManager.h  entry.cc  levelLoader.cc  levelLoader.h  recognizer.cc  recognizer.h  strokeRecorder.cc  strokeRecorder.h  transform.h
source/entities/: canvasOverlay.cc  canvasOverlay.h  character.cc  character.h  gameObject.h  hitbox.cc  hitbox.h  platform.cc  platform.h
source/events/: event.h
source/renderer/: buffers.cc  buffers.h  renderer.h  scene_object.h  shader.cc  shader.h  texture.h  textureManager.cc  textureManager.h
source/shaders/: char.vs  platform.vs  tri.vs
source/stl/: ink_memory.h  memtest.cc  results.txt  test  test.py
tools/level_editor/: README.md  level_editor.py
